Bugfix/quan 157/update user profile (#45)
* Fixed avatar and banner upload

* Renamed enum

* Updated profile settings

* Updated user security settings

* Fixed input cursor pointer

* Fixed error avatar and banner

* Squashed commit of the following:

commit 5938eb26296108e8258b77da94fe1640341737b5
Author: Piotr Narożniak <53837994+xlegodroit@users.noreply.github.com>
Date:   Tue Nov 22 20:24:07 2022 +0100

    feature/QUAN-148 | email templates (#43)

    * Added automatic register confirmation

    * Changed confirmation behavior

    * Fixed avatar and banner upload

    * fix

    * Merge fix

    * Removed reversed commit

    * Code cleanup


commit 0977e887e84008de2bdc39483de017c7ff1caeda
Author: Dmitry "Ventan" Teplov <56700157+Ventan00@users.noreply.github.com>
Date:   Mon Nov 21 18:24:09 2022 +0100

    Dodano liste tagów na profilu i zmodyfikowano działanie paginatora (#41)

    * Dodano liste tagów na profilu i zmodyfikowano działanie paginatora

    * usunięto nie potrzebne importy i instrukcje

    * Dodano tag i ładowanie zdjęć

    * Fixed avatar and banner upload

    * poprawki 1

    * Poprawiono tag na profilu i wyszukiwanie tagów

    * Poprawiono błędy

    * poprawki

    * Fix branch

    * Fix branch


* Fixed avatar and banner upload

* Renamed enum

* Updated profile settings

* Updated user security settings

* Fixed input cursor pointer

* Fixed error avatar and banner

* Updated services docs

* Fix error with avatar icon

* Squashed commit of the following:

commit 5df736dc19860fd41225162a3a887fe7f5a90e66
Author: Piotr Narożniak <53837994+xlegodroit@users.noreply.github.com>
Date:   Mon Nov 28 01:06:35 2022 +0100

    feature/QUAN-146 | Google login (#46)

    * Added login by google

    * Configured env

    * Fix

    * fix#2

    * Roles fix

commit cd6d2cf4478b627ad37b6e99530b333e5688958b
Author: Patrykoss <adresikps@gmail.com>
Date

--- a/src/app/shared/components/textarea/textarea.component.scss
+++ b/src/app/shared/components/textarea/textarea.component.scss
@@ -36,6 +36,10 @@
 	}
 
 	.dark {
+		.mat-input-element {
+			caret-color: colors.$dark-yellow;
+		}
+
 		&.mat-form-field.mat-focused:not(.mat-form-field-invalid) {
 			::ng-deep .mat-form-field-label {
 				color: colors.$dark-yellow;
